# Blogz-Flask

./: database.db  main.py  pyproject.toml
templates/: home.html  individual.html  login.html  postadded.html  postpage.html  signup.html  singleuser.html
